2011-03-19  vadim  <vadim@netcitadel.com>

	* objectMaker.cpp (findMatchingObject): see #2240 better
	deduplication algorithm on import: we consider objects created
	from in-line address/netmask and port specifications found inside
	object-group, access-list, filter or nat commands "anonymous"
	objects. These objects get automatically generated names and are
	deduplicated using only their relevant attributes but not names.
	Objects created from pix named object ("object network foo",
	"object service bar") statements are considered "named"
	objects. They get the name matching the name in corresponding pix
	config line and are deduplicated using both relevant attributes
	and the name.

	* IPTImporter.cpp (pushPolicyRule): change in the importer
	behavior: configuration import is aborted with an appropriate
	error message in the log when program enounters protocol or
	service name that it does not recognize and can not convert to
	protocol or port number. We used to replace port number with some
	placeholder (usually 0) and mark rule as "bad" by coloring it red
	and adding comment.

2011-03-17  vadim  <vadim@netcitadel.com>

	* PIXImporter.cpp (newObjectGroupNetwork): see #2234 Added support
	for import of PIX/ASA "object-group" statements.

	* FirewallInstaller.cpp (getActivationCmd): see #2239 Added
	variable "firewall_name" to configlets that define commands
	installer runs on the firewall to activate new policy (all
	platforms).

2011-03-16  vadim  <vadim@netcitadel.com>

	* Importer.cpp (prepareForDeduplication): fixed #1548 "Object
	de-duplication during import process". Also SourceForge 3030072
	"remove duplicates during any import". Now the program can
	optionally re-use existing objects from both Standard Objects and
	user-defined libraries when it imports existing firewall
	configuration. This works for any firewall platform for which we
	support policy import. Objects are matched by attributes such as